# agent-tuyensinh

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  activate_env.sh  biome.json  demo.py  docker-compose.yml  env.example  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.node.json
.windsurf/rules/: code-style.md
data/: chunks.jsonl  example_queries.txt  fpt_university_2025.docx  intent-examples.json  production_rules.json  templates.json
docs/: README.md  ROADMAP.md  TECHNICAL_SPECS.md
python/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  old_detect.py  optimized_demo.py  production_test.py  requirements-dev.txt  requirements.txt
python/data/: intent-examples.json
src/agno_integration/: __init__.py  intent_tool.py  university_api_tool.py
src/api/: __init__.py  main.py  settings.py
src/api/agents/: __init__.py  fpt_agent.py
src/api/factories/: __init__.py  app_factory.py  service_factory.py
src/api/routes/: __init__.py  base.py  chat.py  health.py  knowledge_routes.py  playground.py  v1_router.py
src/mastra/: index.ts
src/scripts/: index-intents.ts  indexing.ts  ingest.ts  query.ts
src/services/: intent-detection-hybrid.ts
src/shared/: common_types.py  types.py
src/utils/: batch_processor.py  ingest_intent_examples.py
tests/: README.md  test-runner.ts
tests/integration/: agent-workflow.test.ts
tests/performance/: benchmark.test.ts
tests/unit/: intent-detection-enhanced.test.ts
(+31 files in other folders)
